<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:animateLayoutChanges="true"
    android:layout_height="match_parent"
    android:background="@color/Black"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/linearLayout_timer_input_number_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"
                android:theme="@style/NumberPickerTopLabel"
                android:text="@string/hours"/>
            <NumberPicker
                android:id="@+id/number_picker_hours"
                android:layout_width="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:theme="@style/NumberPickerText"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="20dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickersSeparator"
                android:layout_gravity="center_vertical"
                android:text=":"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"
                android:theme="@style/NumberPickerTopLabel"
                android:text="@string/minutes"/>
            <NumberPicker
                android:id="@+id/number_picker_minutes"
                android:layout_width="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:theme="@style/NumberPickerText"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="20dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/NumberPickersSeparator"
                android:layout_gravity="center_vertical"
                android:text=":"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:theme="@style/NumberPickerTopLabel"
                android:text="@string/seconds"/>
            <NumberPicker
                android:id="@+id/number_picker_seconds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:descendantFocusability="blocksDescendants"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:theme="@style/NumberPickerText"
                />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_timer_message_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TimerMessageStyle"
            android:text="@string/timeIsUP"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout_timer_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        android:layout_marginTop="95dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_timer_h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:"
            android:theme="@style/NumberTextViewsStyle"/>


        <TextView
            android:id="@+id/textView_timer_m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:"
            android:theme="@style/NumberTextViewsStyle"/>

        <TextView
            android:id="@+id/textView_timer_s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00"
            android:theme="@style/NumberTextViewsStyle"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:animateLayoutChanges="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <Button
            android:id="@+id/button_resume_timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonClockController"
            android:background="@android:color/transparent"
            android:text="@string/resume" />

        <Button
            android:id="@+id/button_start_timer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:theme="@style/ButtonClockController"
            android:background="@android:color/transparent"
            android:text="@string/start" />
        <Button
            android:id="@+id/button_stop_timer"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:theme="@style/ButtonClockController"
            android:background="@android:color/transparent"
            android:text="@string/stop" />

        <Button
            android:id="@+id/button_reset_timer"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:theme="@style/ButtonClockController"
            android:background="@android:color/transparent"
            android:text="@string/reset" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>